Fix: Reduced the brightness of backdrop rather than blurring it Revert: Blur backdrop when episode thumbnail is visible

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -735,7 +735,7 @@ html {
     content: "";
     position: absolute;
     inset: 0;
-    backdrop-filter: var(--blurLargest);
+    backdrop-filter: brightness(.5);
     /* mask: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, transparent 35%); */
 }
 
